--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ task clean(type: Delete) {
 
 
 ext {
+    compileSdkVersion = 28
+    targetSdkVersion = 28
+    minSdkVersion = 26
     buildToolsVersion = "28.0.3"
     supportLibVersion = "28.0.0"
     roomVersion = '1.1.1' // '2.0.0' eller "1.0.0-alpha1"
